@@ -1,3 +1,12 @@
+2002-09-22  Bruno Coudoin  <bcoudoin@anfora.fr>
+
+	* boards/boardicons/algebra_group.png: better icon (I hope)
+	* boards/boardicons/algebramenu.png: better icon (I hope)
+	* src/boards/chess.c: (chess_destroy_all_items),
+	(chess_create_item), (engine_local_cb): Added draw support. Fixed text items being lost after first party
+	* src/boards/chess_position.c: (position_set_initial_partyend),
+	(position_set_initial_movelearn): fixed too simple or bad example
+
 2002-09-19  Bruno Coudoin  <bcoudoin@anfora.fr>
 
 	* boards/Makefile.am: added specific chess boards
